update website files

--- a/index.html
+++ b/index.html
@@ -88,10 +88,23 @@
     </header>
     
     <section class="hero-section">
-        <div class="hero-wrapper">
-            <h1>A TAKE OFF POINT FOR NEW TECHIES</h1>
-            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam pariatur dicta delectus sed consequatur neque illo blanditiis repellendus, rerum esse est tempore, vel molestias nisi animi asperiores. Ex, dolore deserunt.</P>
-            <a href="">LEARN MORE</a>
+        <div class="signup-form">
+            <h2>BECOME A MEMBER</h2>
+            <p>Get instant access to 4500 video courses</p>
+            <form>
+                <input type="text" placeholder="First name" required>
+                <input type="text" placeholder="Last name" required>
+                <input type="email" placeholder="Email Address" required>
+                <select required>
+                    <option value="">Select Learning Program</option>
+                    <option value="web-dev">Web Development</option>
+                    <option value="data-science">Data Science</option>
+                    <option value="design">Graphic Design</option>
+                    <!-- Add more options as needed -->
+                </select>
+                <textarea placeholder="Tell us about your learning goals" required></textarea>
+                <button type="submit">START LEARNING</button>
+            </form>
         </div>
     </section>
 
