update website files

--- a/index.html
+++ b/index.html
@@ -62,23 +62,36 @@
     </header>
     
     <section class="hero-section">
-        <div class="signup-form">
-            <h2>BECOME A MEMBER</h2>
-            <p>Get instant access to 4500 video courses</p>
-            <form>
-                <input type="text" placeholder="First name" required>
-                <input type="text" placeholder="Last name" required>
-                <input type="email" placeholder="Email Address" required>
-                <select required>
-                    <option value="">Select Learning Program</option>
-                    <option value="web-dev">Web Development</option>
-                    <option value="data-science">Data Science</option>
-                    <option value="design">Graphic Design</option>
-                    <!-- Add more options as needed -->
-                </select>
-                <textarea placeholder="Tell us about your learning goals" required></textarea>
-                <button type="submit">START LEARNING</button>
-            </form>
+        <div class="container5">
+            <div class="left-section">
+                <div class="text-content">
+                    <h1>Take great online courses from anywhere in the world</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <a href="#" class="view-courses-btn">VIEW COURSES</a>
+                </div>
+            </div>
+            <div class="right-section">
+                <div class="form-container">
+                    <h2>BECOME A MEMBER</h2>
+                    <p>Get instant access to 4500 video courses</p>
+                    <form action="#">
+                        <div class="form-group">
+                            <input type="text" placeholder="First name" required>
+                            <input type="text" placeholder="Last name" required>
+                        </div>
+                        <input type="email" placeholder="Email Address" required>
+                        <select required>
+                            <option value="" disabled selected>Select Learning Program</option>
+                            <option value="program1">Website Developement</option>
+                            <option value="program2">Data Analysis</option>
+                            <option value="program2">UI/UX</option>
+                            <option value="program2">Cyber Security</option>
+                        </select>
+                        <textarea placeholder="Detail information"></textarea>
+                        <button type="submit">REQUEST INFORMATION</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </section>
 
